--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,11 +46,11 @@ h5,
 h6 {
   letter-spacing: 0px;
   margin: 0px; 
-  color: #232434;
+  color: #1A2124ff;
   font-weight: 400;
 }
 a {
-color: #232434;
+color: #1A2124ff;
 text-decoration: none;
 -webkit-transition: all 0.2s ease 0s;
 -o-transition: all 0.2s ease 0s;
@@ -105,7 +105,7 @@ fieldset {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: #7564e5;
+  background-color: #C69E78ff;
   opacity: 0.6;
   position: absolute;
   top: 0;
@@ -173,7 +173,7 @@ margin: auto;
 /*END SECTION TITLE DESIGN*/
 /*START SCROLL TO TOP*/
 .topcontrol {
-background: #7564e5 none repeat scroll 0 0;
+background: #C69E78ff none repeat scroll 0 0;
 border-radius:3px;
 bottom: 5px;
 -webkit-box-shadow:0 0 10px rgba(0, 0, 0, 0.08);
@@ -193,7 +193,7 @@ transition: all 0.2s ease 0s;
 width:45px;
 }
 .topcontrol:hover {
-    background: #232434;
+    background: #1A2124ff;
     color: #fff;
 }
 /*END SCROLL TO TOP*/
@@ -217,7 +217,7 @@ width:45px;
 	transition: all 0.5s ease 0s;
 }
 @media only screen and (max-width:767px) { 
-.bg-faded {background-color:#232434;}
+.bg-faded {background-color:#1A2124ff;}
 }
 .navbar-fixed {
     z-index: 999;
@@ -230,11 +230,11 @@ width:45px;
     animation: fadeInDown 800ms;
     -webkit-backface-visibility: hidden;
     border-radius: 0px;
-    background: #232434;
+    background: #1A2124ff;
 	box-shadow: 0px 60px 60px rgba(0,0,0,0.1);
 }
 @media only screen and (max-width:767px) { 
-.navbar-fixed {background: #232434;}
+.navbar-fixed {background: #1A2124ff;}
 }
 #navigation{
 	padding: 20px 0;
@@ -320,7 +320,7 @@ margin-top: 15px;
 
 #navigation ul li a{ 
 position: inherit;
-color: #232434;
+color: #1A2124ff;
 
 }
 
@@ -478,7 +478,7 @@ color: #fff !important;
     position: relative;
 }
 .home_bg:before {
-    background: rgba(0,0,0,0.5);
+    background: rgba(0,0,0,0.4);
     content: "";
     height: 100%;
 	opacity:0.9;
@@ -520,7 +520,7 @@ margin-right: 20px;
 	background: #fff;
 	border: 1px solid #fff;
 	border-radius: 0px;
-	color: #232434;
+	color: #1A2124ff;
 	display: inline-block;
 	font-size: 16px;
 	overflow: hidden;
@@ -534,13 +534,13 @@ margin-right: 20px;
 .learn_btn {padding: 10px 40px;}
 }
 .learn_btn:hover{
-background:#232434;
+background:#1A2124ff;
 color:#fff;
-border: 1px solid #232434;
+border: 1px solid #1A2124ff;
 }
 
 .get_btn {
-background: #none;
+background: none;
 border: 1px solid #fff;
 border-radius:0px;
 color: #fff;
@@ -557,32 +557,32 @@ transition: all 0.3s ease 0s;
 .get_btn {padding: 10px 40px;}
 }
 .get_btn:hover, .get_btn:focus{
-background:#232434;
+background:#1A2124ff;
 color:#fff;
-border: 1px solid #232434;
+border: 1px solid #1A2124ff;
 }
 
 .cta_btn {
-background: #none;
-border: 1px solid #232434;
-border-radius:0px;
-color: #232434;
-display: inline-block;
-font-size: 16px;
-overflow: hidden;
-padding:12px 30px;
-text-transform: capitalize;
--webkit-transition: all 0.3s ease 0s;
--o-transition: all 0.3s ease 0s;
-transition: all 0.3s ease 0s;
+	background: none;
+	border: 1px solid #C69E78ff;
+	border-radius:0px;
+	color: #1A2124ff;
+	display: inline-block;
+	font-size: 16px;
+	overflow: hidden;
+	padding: 12px 30px;
+	text-transform: capitalize;
+	-webkit-transition: all 0.3s ease 0s;
+	-o-transition: all 0.3s ease 0s;
+	transition: all 0.3s ease 0s;
 }
 @media only screen and (max-width:360px) { 
 .cta_btn {padding: 10px 40px;}
 }
 .cta_btn:hover, .cta_btn:focus{
-background:#7564E5;
+background:#C69E78ff;
 color:#fff;
-border: 1px solid #7564E5;
+border: 1px solid #C69E78ff;
 }
 
 /*START OTHER HOME PAGE CSS*/
@@ -768,7 +768,7 @@ z-index:100;
 	transition: all 0.3s ease 0s;
 	position: absolute;
 	top: -35px;
-	background: #7564e5;
+	background: #C69E78ff;
 	width: 70px;
 	height: 70px;
 	line-height: 70px;
@@ -795,6 +795,15 @@ z-index:100;
 	position: relative;
 }
 
+/*START ABOUT TWO*/
+.about-content-two-r {
+	background-image: url(../img/bg//bg-intro-about-r.png);
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: top center;
+	position: relative;
+}
+
 .about-two-img{text-align: center;}
 .about-two img{}
 .about-two{padding-top: 150px;}
@@ -813,7 +822,7 @@ line-height: 52px;
 .about-two p {padding-right: 0px;}
 }
 .about-btn{
-	background: #7564e5;
+	background: #C69E78ff;
 	color: #fff;
 	padding: 12px 30px;
 	display: inline-block;
@@ -823,7 +832,7 @@ line-height: 52px;
 	transition: 0.3s;
 }
 .about-btn:hover{
-	background: #232434;
+	background: #1A2124ff;
 	color: #fff;
 }
 /*END ABOUT TWO*/
@@ -888,7 +897,7 @@ padding:60px 0;
     width: 100%;
 }
 .progress-bar > span {
-    background: #7564e5 none repeat scroll 0 0;
+    background: #C69E78ff none repeat scroll 0 0;
     display: block;
     height: 100%;
     width: 0;
@@ -921,12 +930,12 @@ font-weight: 500;
 }
 .single-about-process ul li span {
 	margin-right: 10px;
-	border: 2px solid #7564e5;
+	border: 2px solid #C69E78ff;
 	border-radius: 30px;
 	font-size: 14px;
 	font-weight: 600;
 	color: #fff;
-	background: #7564e5;
+	background: #C69E78ff;
 }
 /*START COUNTER*/
 .counter_feature {}
@@ -965,7 +974,7 @@ margin-bottom: 0;
 color:#fff;
 text-transform: capitalize;
 }
-.color-one{background: #7564e5;}
+.color-one{background: #C69E78ff;}
 .color-two{background: #35ac39;margin-top: 60px;}
 @media only screen and (max-width:480px) { 
 .color-two{margin-top:0px;}
@@ -1010,7 +1019,7 @@ text-transform: capitalize;
 	font-size: 22px;
 	display: block;
 	margin-bottom: 30px;
-	background: #7564e5;
+	background: #C69E78ff;
 	width: 70px;
 	height: 70px;
 	line-height: 70px;
@@ -1077,7 +1086,7 @@ padding:100px 0;
 	word-spacing: 2px;
 }
 .our_video h1 i{
-color:#7564e5;
+color:#C69E78ff;
 font-size: 15px;
 vertical-align: middle;
 }
@@ -1091,7 +1100,7 @@ vertical-align: middle;
 background: rgba(255, 255, 255, 0.9) none repeat scroll 0 0;
 border: 10px solid rgba(0, 0, 0, 0.05);
 border-radius: 100px;
-color: #7564e5;
+color: #C69E78ff;
 display: block;
 font-size: 24px;
 height: 100px;
@@ -1167,7 +1176,7 @@ width: 100px;
 	padding: 10px 30px;
 	border-radius: 20px;
 }
-.single-project .sp-social ul li a:hover{color:#7564e5;}
+.single-project .sp-social ul li a:hover{color:#C69E78ff;}
 .single-project .sp-info {
     position: relative;
     background-color: #f5f8fa;
@@ -1181,7 +1190,7 @@ width: 100px;
 	-o-transition:0.3s;
 	transition:0.3s;
 }
-.single-project .sp-info p a:hover{color:#7564e5;} 
+.single-project .sp-info p a:hover{color:#C69E78ff;} 
 /*START OWL BUTTON*/
 .owl-theme{-webkit-transition:0.4s;-o-transition:0.4s;transition:0.4s;}
 .owl-theme .owl-controls{
@@ -1201,13 +1210,13 @@ width: 100px;
 	line-height: 30px;
 	opacity: 1;
 	border-radius: 30px;
-	background: #7564e5;
+	background: #C69E78ff;
 	-webkit-transition: 0.4s;
 	-o-transition: 0.4s;
 	transition: 0.4s;
 }
 
-.owl-theme .owl-controls .owl-buttons div:hover{background:#7564e5;display:block;}
+.owl-theme .owl-controls .owl-buttons div:hover{background:#C69E78ff;display:block;}
 .owl-prev{
     position: absolute;
     left: -5%;
@@ -1264,10 +1273,10 @@ width: 100px;
 	line-height: 32px;
 }
 .project_details_info ul li i {
-	color: #7564e5;
+	color: #C69E78ff;
 	margin-right: 10px;
 }
-.project_details_info ul li  a{color:#7564e5;}
+.project_details_info ul li  a{color:#C69E78ff;}
 .single_project_details p{}
 /*END SINGLE PROJECT DETAILS*/
 /*
@@ -1344,13 +1353,13 @@ font-size: 14px;
 	border-radius: 100px;
 	border: 1px solid #eee;
 	font-size: 14px;
-	color: #232434;
+	color: #1A2124ff;
 	-webkit-transition: 0.3s;
 	-o-transition: 0.3s;
 	transition: 0.3s;
 }
 .single-team .team-content .social li a:hover {
-color: #7564e5;
+color: #C69E78ff;
 }
 .single-team:hover::before {
   opacity: 0.7;
@@ -1371,7 +1380,7 @@ color: #7564e5;
  * ----------------------------------------------------------------------------------------
  */
 .our_pricing {
-	background-image: url(../img/bg/pricing-bg.jpg);
+	background-image: url(../img/bg/pricing-bg-n.png);
 	background-size: 100%;
 	background-repeat: no-repeat;
 	background-position: top center;
@@ -1382,7 +1391,7 @@ color: #7564e5;
 }
 .pricingTable{
 background: #fff none repeat scroll 0 0;
-color: #232434;
+color: #1A2124ff;
 margin-top: 30px;
 padding: 50px 15px;
 -webkit-box-shadow: 0px 19px 43px 0px rgba(17, 17, 17, 0.05);
@@ -1444,7 +1453,7 @@ z-index: 1;
 }
 
 .pricingTable-2 .price-value .value-bg {
-  color: #7564e5;
+  color: #C69E78ff;
 }
 .pricingTable .pricing-content{
     list-style: none;
@@ -1466,8 +1475,8 @@ z-index: 1;
     .pricingTable{ margin-bottom: 50px; }
 }
 .btn-price-bg {
-background: #7564e5;
-border: 2px solid #7564e5;
+background: #C69E78ff;
+border: 2px solid #C69E78ff;
 border-radius: 5000px;
 color: #fff;
 display: inline-block;
@@ -1480,9 +1489,9 @@ text-transform: capitalize;
 transition: all 0.3s ease 0s;
 }
 .pricingTable:hover .btn-price-bg{
-background:#232434;
+background:#1A2124ff;
 color:#fff;
-border: 2px solid #232434;
+border: 2px solid #1A2124ff;
 }
 
 
@@ -1574,7 +1583,7 @@ color:#fff;
 @media only screen and (max-width: 960px){
 .testimonial1-carousel .slick-arrow { display:none !important;}
 }
-.testimonial1-carousel .slick-arrow:hover{background:#fff;color:#232434;border: 1px solid #fff;}
+.testimonial1-carousel .slick-arrow:hover{background:#fff;color:#1A2124ff;border: 1px solid #fff;}
 .testimonial1-carousel .slick-dots {
 	padding: 0;
 	list-style: none;
@@ -1654,7 +1663,7 @@ color:#fff;
 	-o-transition: all 0.4s ease 0s;
 	transition: all 0.4s ease 0s;
 }
-.single_blog:hover .post-date{background:#7564e5;}
+.single_blog:hover .post-date{background:#C69E78ff;}
 .single_blog:hover .post-date .date{color:#fff;}
 .single_blog:hover .post-date .month {color:#fff;}
 .date {
@@ -1679,7 +1688,7 @@ color:#fff;
 	transition: all 0.4s ease 0s;
 	line-height: 36px;
 }
-.blog_content h3 a:hover{color:#7564e5;}
+.blog_content h3 a:hover{color:#C69E78ff;}
 
 .blog-page{background:#f5f8fa;}
 .single_blog_page {
@@ -1699,19 +1708,19 @@ color:#fff;
 	-o-transition: 0.3s;
 	transition: 0.3s;
 }
-.single_blog_page h2 a:hover{color:#7564e5;}
+.single_blog_page h2 a:hover{color:#C69E78ff;}
 .single_blog_page span{}
 .single_blog_page span a {
-	color: #7564e5;
+	color: #C69E78ff;
 	display: inline-block;
 	margin-right: 10px;
 	margin-bottom: 10px;
 }
-.single_blog_page span a:hover{color:#232434;}
+.single_blog_page span a:hover{color:#1A2124ff;}
 .single_blog_page p{margin-bottom: 25px;}
 .single_blog_page_para{margin: 25px 0;}
-.single_blog_page_btn{color: #7564e5;}
-.single_blog_page_btn:hover{color: #232434;}
+.single_blog_page_btn{color: #C69E78ff;}
+.single_blog_page_btn:hover{color: #1A2124ff;}
 
 /*START PAGINATION*/
 #pagination {
@@ -1720,7 +1729,7 @@ color:#fff;
 ul.blog_pagination li a {
 border: 1px solid #eee;
 border-radius: 0;
-color: #232434;
+color: #1A2124ff;
 display: block;
 font-size: 18px;
 font-weight: 500;
@@ -1733,15 +1742,15 @@ width: 45px;
 }
 ul.blog_pagination li a:hover {
     color: #fff;
-    background: #7564e5;
-    border: 1px solid #7564e5;
+    background: #C69E78ff;
+    border: 1px solid #C69E78ff;
 }
 /*END PAGINATION*/
 /*START BLOG SIDEBAR DESIGN*/
 .contact_form_blog{padding-top:0px!important;}
 .blog_sidebar_title {
 border-bottom: 1px solid #eee;
-color: #232434;
+color: #1A2124ff;
 font-size: 13px;
 font-weight: 600;
 letter-spacing: 1px;
@@ -1755,7 +1764,7 @@ text-transform: uppercase;
 	background: #fff;
 	padding: 30px 30px;
 	border-radius: 3px;
-	border-top: 3px solid #7564e5;
+	border-top: 3px solid #C69E78ff;
 	-webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.06);
 	        box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.06);
 }
@@ -1773,7 +1782,7 @@ color: #282828;
 transition: all 0.3s ease 0s;
 height: 50px;
 }
-.blog_search input:focus{border: 1px solid #7564e5;}
+.blog_search input:focus{border: 1px solid #C69E78ff;}
 .single_latest_blog {
 	overflow: hidden;
 	border-bottom: 1px solid #eee;
@@ -1790,11 +1799,11 @@ height: 50px;
 	-o-transition: all 0.3s ease 0s;
 	transition: all 0.3s ease 0s;
 }
-.single_latest_blog:hover h4 { color: #7564e5 }
+.single_latest_blog:hover h4 { color: #C69E78ff }
 .single_latest_blog span { color: #161616 }
 .single_upcoming_event {margin-bottom: 20px;}
 .single_upcoming_event h4 {
-	color: #232434;
+	color: #1A2124ff;
 	font-size: 17px;
 	font-weight: 600;
 	line-height: 28px;
@@ -1803,8 +1812,8 @@ height: 50px;
 	-o-transition: all 0.3s ease 0s;
 	transition: all 0.3s ease 0s;
 }
-.single_upcoming_event:hover h4 { color: #7564e5 }
-.single_upcoming_event span i{margin-right:5px;color: #7564e5 }
+.single_upcoming_event:hover h4 { color: #C69E78ff }
+.single_upcoming_event span i{margin-right:5px;color: #C69E78ff }
 .single_upcoming_event span { color: #777 }
 .categories ul {
     margin: 0;
@@ -1813,13 +1822,13 @@ height: 50px;
 }
 .categories ul li { }
 .categories ul li a {
-	color: #232434;
+	color: #1A2124ff;
 	display: block;
 	font-size: 14px;
 	font-weight: 500;
 	padding: 5px 0;
 }
-.categories ul li a:hover { color: #7564e5 }
+.categories ul li a:hover { color: #C69E78ff }
 .categories ul li a i { margin-right: 10px }
 .video_post iframe {
     width: 100%;
@@ -1827,9 +1836,9 @@ height: 50px;
     border: medium none;
 }
 .tag a {
-	border: 2px solid #7564e5;
+	border: 2px solid #C69E78ff;
 	border-radius: 30px;
-	color: #232434;
+	color: #1A2124ff;
 	display: block;
 	float: left;
 	font-size: 14px;
@@ -1842,9 +1851,9 @@ height: 50px;
 	transition: all 0.3s ease 0s;
 }
 .tag a:hover {
-    background: #7564e5;
+    background: #C69E78ff;
     color: #fff;
-    border: 2px solid #7564e5;
+    border: 2px solid #C69E78ff;
 }
 /*END BLOG SIDEBAR DESIGN*/
 /*START BLOG SINGLE PAGE DESIGN*/
@@ -1863,7 +1872,7 @@ height: 50px;
     padding: 20px;
 }
 .author_part img {
-    border: 4px solid #7564e5;
+    border: 4px solid #C69E78ff;
     border-radius: 100px;
     float: left;
     height: 120px;
@@ -1901,7 +1910,7 @@ padding:60px;
 }
 .single_comment_mbnone { margin-bottom: 0px }
 .single_comment img {
-    border: 4px solid #7564e5;
+    border: 4px solid #C69E78ff;
     border-radius: 100px;
     float: left;
     height: 120px;
@@ -1928,7 +1937,7 @@ text-transform: uppercase;}
 	border-width: 0 0 1px;
 	-webkit-box-shadow: none;
 	        box-shadow: none;
-	color: #232434;
+	color: #1A2124ff;
 	font-size: 16px;
 	font-weight: 500;
 	padding: 15px;
@@ -1945,7 +1954,7 @@ text-transform: uppercase;}
     border-bottom: 1px solid #ddd;
     -webkit-box-shadow: none;
             box-shadow: none;
-	color: #232434;
+	color: #1A2124ff;
     outline: 0 none;
 }
 .comment_form textarea:hover,.comment_form textarea:focus {
@@ -1953,7 +1962,7 @@ text-transform: uppercase;}
     border-bottom: 1px solid #ddd;
     -webkit-box-shadow: none;
             box-shadow: none;
-	color: #232434;
+	color: #1A2124ff;
     outline: 0 none;
 }
 .btn-blog-bg {
@@ -1965,14 +1974,14 @@ text-transform: uppercase;}
 	-webkit-transition: all 0.3s ease 0s;
 	-o-transition: all 0.3s ease 0s;
 	transition: all 0.3s ease 0s;
-	background: #7564e5!important;
+	background: #C69E78ff!important;
 	font-family: 'poppins', sans-serif;
 	cursor: pointer;
 	width: 100%;
 }
 .btn-blog-bg:hover,
 .btn-blog-bg:focus {
-    background: #232434!important;
+    background: #1A2124ff!important;
     color: #fff!important;
 }
 /*END BLOG SINGLE PAGE DESIGN*/
@@ -1991,9 +2000,9 @@ text-transform: uppercase;}
 .partner_br {
 	-webkit-box-shadow: 0px 19px 43px 0px rgba(17, 17, 17, 0.05);
 	        box-shadow: 0px 19px 43px 0px rgba(17, 17, 17, 0.05);
-	border-top: 1px solid #7564e5;
+	border-top: 1px solid #C69E78ff;
 	border-radius: 3px;
-	border-bottom: 1px solid #7564e5;
+	border-bottom: 1px solid #C69E78ff;
 }
 .single_logo {padding:30px;}
 .single_logo a img {
@@ -2030,7 +2039,7 @@ text-transform: uppercase;}
 	border-radius: 3px;
 	-webkit-box-shadow: none;
 	        box-shadow: none;
-	color: #232434;
+	color: #1A2124ff;
 	font-size: 16px;
 	height: 60px;
 	padding: 10px;
@@ -2047,7 +2056,7 @@ text-transform: uppercase;}
 	border-radius: 3px;
 	-webkit-box-shadow: none;
 	        box-shadow: none;
-	color: #232434;
+	color: #1A2124ff;
 	font-size: 16px;
 	padding: 10px;
 	width: 100%;
@@ -2060,7 +2069,7 @@ text-transform: uppercase;}
 .contact input:focus {
 background: #fff;
 border: 1px solid #fff;
-color: #232434;
+color: #1A2124ff;
     -webkit-box-shadow: none;
             box-shadow: none;
     outline: 0 none;
@@ -2068,13 +2077,13 @@ color: #232434;
 .contact textarea:focus {
 background: #fff;
 border: 1px solid #fff;
-color: #232434;
+color: #1A2124ff;
     -webkit-box-shadow: none;
             box-shadow: none;
     outline: 0 none;
 }
 .form-control::placeholder {
-	color: #232434;
+	color: #1A2124ff;
 	opacity: 1;
 }
 .btn-contact-bg {
@@ -2086,14 +2095,14 @@ color: #232434;
 	-webkit-transition: all 0.3s ease 0s;
 	-o-transition: all 0.3s ease 0s;
 	transition: all 0.3s ease 0s;
-	background: #7564e5;
+	background: #C69E78ff;
 	font-family: 'poppins', sans-serif;
 	cursor: pointer;
 	width: 100%;
 }
 .btn-contact-bg:hover,
 .btn-contact-bg:focus {
-    background: #232434;
+    background: #1A2124ff;
     color: #fff;
 }
 
@@ -2108,7 +2117,7 @@ color: #232434;
 }
 .single_address i {
 	background: #f6f6f6;
-	color: #7564e5;
+	color: #C69E78ff;
 	border-radius: 30px;
 	width: 60px;
 	height: 60px;
@@ -2125,7 +2134,7 @@ color: #232434;
 	transition: all 0.3s ease 0s;
 }
 .single_address:hover i {
-	background: #7564e5;
+	background: #C69E78ff;
 	color: #fff;
 }
 .single_address h4 {
@@ -2152,7 +2161,7 @@ color: #232434;
 * ----------------------------------------------------------------------------------------
 */
 .footer {
-	background: #232434;
+	background: #1A2124ff;
 	padding-top: 60px;
 	padding-bottom: 40px;
 }
@@ -2185,7 +2194,7 @@ color: #232434;
 .subscribe__input{font-size: 13px;}
 }
 .subscribe__btn {
-	background-color: #7564e5;
+	background-color: #C69E78ff;
 	border-radius: 100px;
 	color: #fff;
 	cursor: pointer;
@@ -2210,7 +2219,7 @@ color: #232434;
 }
 }
 .subscribe__btn:hover{
-	color:#232434;
+	color:#1A2124ff;
 	background:#fff;
 }
 button {
@@ -2269,7 +2278,7 @@ text-align: center;
 }
 .social_profile ul li a:hover{
 background:#fff;
-color:#232434;
+color:#1A2124ff;
 }
 
 /*END SOCIAL PROFILE CSS*/
@@ -2286,7 +2295,7 @@ color:#232434;
 	transition: all 0.2s ease 0s;
 	font-weight: 500;
 }
-.copyright a:hover{color:#7564e5;}
+.copyright a:hover{color:#C69E78ff;}
 /*
 * ----------------------------------------------------------------------------------------
 * 14.END FOOTER DESIGN
@@ -2365,9 +2374,36 @@ font-weight: 600;
 	transform: rotate(-45deg);
 }
   
-  .toggle-btn.active .arrow::after {
+.toggle-btn.active .arrow::after {
 	transform: rotate(45deg);
-  }
+}
+
+/* New Pricing style */
+.price-card{
+    background:#fff;
+    margin-bottom:30px;
+    border-radius:3px;
+    position:relative;
+    z-index:2;
+    -webkit-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+}
+
+
+.price-card:hover{
+    -webkit-box-shadow:0px 60px 60px rgba(0,0,0,0.1);
+            box-shadow:0px 60px 60px rgba(0,0,0,0.1);
+    z-index:100;
+    -webkit-transform: translate(0, -10px);
+        -ms-transform: translate(0, -10px);
+            transform: translate(0, -10px);
+}
+
+td a:hover {
+	color: #074754ff;
+}
+
 /*
  * ----------------------------------------------------------------------------------------
  * 15.END SECTION TOP DESIGN
