--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ fieldset {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: #C69E78ff;
+  background-color: #0D5360ff;
   opacity: 0.6;
   position: absolute;
   top: 0;
@@ -147,6 +147,7 @@ fieldset {
 	text-transform: capitalize;
 	margin-bottom: 15px;
 }
+
 @media only screen and (max-width:480px) { 
 .section-title  h1  {
 font-size:24px;
@@ -165,15 +166,15 @@ h4.section-title-white{color:#fff;}
 p.section-title-white{color:#fff;}
 @media only screen and (max-width:768px) { 
 .section-title  p{
-padding: 0 10px;
-width: 90%;
-margin: auto;	
-}
+	padding: 0 10px;
+	width: 90%;
+	margin: auto;	
+	}
 }
 /*END SECTION TITLE DESIGN*/
 /*START SCROLL TO TOP*/
 .topcontrol {
-background: #C69E78ff none repeat scroll 0 0;
+background: #0D5360ff none repeat scroll 0 0;
 border-radius:3px;
 bottom: 5px;
 -webkit-box-shadow:0 0 10px rgba(0, 0, 0, 0.08);
@@ -564,7 +565,7 @@ border: 1px solid #1A2124ff;
 
 .cta_btn {
 	background: none;
-	border: 1px solid #C69E78ff;
+	border: 1px solid #0D5360ff;
 	border-radius:0px;
 	color: #1A2124ff;
 	display: inline-block;
@@ -580,9 +581,9 @@ border: 1px solid #1A2124ff;
 .cta_btn {padding: 10px 40px;}
 }
 .cta_btn:hover, .cta_btn:focus{
-background:#C69E78ff;
+background:#0D5360ff;
 color:#fff;
-border: 1px solid #C69E78ff;
+border: 1px solid #0D5360ff;
 }
 
 /*START OTHER HOME PAGE CSS*/
@@ -768,7 +769,7 @@ z-index:100;
 	transition: all 0.3s ease 0s;
 	position: absolute;
 	top: -35px;
-	background: #C69E78ff;
+	background: #0D5360ff;
 	width: 70px;
 	height: 70px;
 	line-height: 70px;
@@ -822,7 +823,7 @@ line-height: 52px;
 .about-two p {padding-right: 0px;}
 }
 .about-btn{
-	background: #C69E78ff;
+	background: #0D5360ff;
 	color: #fff;
 	padding: 12px 30px;
 	display: inline-block;
@@ -897,7 +898,7 @@ padding:60px 0;
     width: 100%;
 }
 .progress-bar > span {
-    background: #C69E78ff none repeat scroll 0 0;
+    background: #0D5360ff none repeat scroll 0 0;
     display: block;
     height: 100%;
     width: 0;
@@ -930,12 +931,12 @@ font-weight: 500;
 }
 .single-about-process ul li span {
 	margin-right: 10px;
-	border: 2px solid #C69E78ff;
+	border: 2px solid #0D5360ff;
 	border-radius: 30px;
 	font-size: 14px;
 	font-weight: 600;
 	color: #fff;
-	background: #C69E78ff;
+	background: #0D5360ff;
 }
 /*START COUNTER*/
 .counter_feature {}
@@ -974,7 +975,7 @@ margin-bottom: 0;
 color:#fff;
 text-transform: capitalize;
 }
-.color-one{background: #C69E78ff;}
+.color-one{background: #0D5360ff;}
 .color-two{background: #35ac39;margin-top: 60px;}
 @media only screen and (max-width:480px) { 
 .color-two{margin-top:0px;}
@@ -1019,7 +1020,7 @@ text-transform: capitalize;
 	font-size: 22px;
 	display: block;
 	margin-bottom: 30px;
-	background: #C69E78ff;
+	background: #0D5360ff;
 	width: 70px;
 	height: 70px;
 	line-height: 70px;
@@ -1086,7 +1087,7 @@ padding:100px 0;
 	word-spacing: 2px;
 }
 .our_video h1 i{
-color:#C69E78ff;
+color:#0D5360ff;
 font-size: 15px;
 vertical-align: middle;
 }
@@ -1100,7 +1101,7 @@ vertical-align: middle;
 background: rgba(255, 255, 255, 0.9) none repeat scroll 0 0;
 border: 10px solid rgba(0, 0, 0, 0.05);
 border-radius: 100px;
-color: #C69E78ff;
+color: #0D5360ff;
 display: block;
 font-size: 24px;
 height: 100px;
@@ -1176,7 +1177,7 @@ width: 100px;
 	padding: 10px 30px;
 	border-radius: 20px;
 }
-.single-project .sp-social ul li a:hover{color:#C69E78ff;}
+.single-project .sp-social ul li a:hover{color:#0D5360ff;}
 .single-project .sp-info {
     position: relative;
     background-color: #f5f8fa;
@@ -1190,7 +1191,7 @@ width: 100px;
 	-o-transition:0.3s;
 	transition:0.3s;
 }
-.single-project .sp-info p a:hover{color:#C69E78ff;} 
+.single-project .sp-info p a:hover{color:#0D5360ff;} 
 /*START OWL BUTTON*/
 .owl-theme{-webkit-transition:0.4s;-o-transition:0.4s;transition:0.4s;}
 .owl-theme .owl-controls{
@@ -1210,13 +1211,13 @@ width: 100px;
 	line-height: 30px;
 	opacity: 1;
 	border-radius: 30px;
-	background: #C69E78ff;
+	background: #0D5360ff;
 	-webkit-transition: 0.4s;
 	-o-transition: 0.4s;
 	transition: 0.4s;
 }
 
-.owl-theme .owl-controls .owl-buttons div:hover{background:#C69E78ff;display:block;}
+.owl-theme .owl-controls .owl-buttons div:hover{background:#0D5360ff;display:block;}
 .owl-prev{
     position: absolute;
     left: -5%;
@@ -1273,10 +1274,10 @@ width: 100px;
 	line-height: 32px;
 }
 .project_details_info ul li i {
-	color: #C69E78ff;
+	color: #0D5360ff;
 	margin-right: 10px;
 }
-.project_details_info ul li  a{color:#C69E78ff;}
+.project_details_info ul li  a{color:#0D5360ff;}
 .single_project_details p{}
 /*END SINGLE PROJECT DETAILS*/
 /*
@@ -1359,7 +1360,7 @@ font-size: 14px;
 	transition: 0.3s;
 }
 .single-team .team-content .social li a:hover {
-color: #C69E78ff;
+color: #0D5360ff;
 }
 .single-team:hover::before {
   opacity: 0.7;
@@ -1453,7 +1454,7 @@ z-index: 1;
 }
 
 .pricingTable-2 .price-value .value-bg {
-  color: #C69E78ff;
+  color: #0D5360ff;
 }
 .pricingTable .pricing-content{
     list-style: none;
@@ -1475,8 +1476,8 @@ z-index: 1;
     .pricingTable{ margin-bottom: 50px; }
 }
 .btn-price-bg {
-background: #C69E78ff;
-border: 2px solid #C69E78ff;
+background: #0D5360ff;
+border: 2px solid #0D5360ff;
 border-radius: 5000px;
 color: #fff;
 display: inline-block;
@@ -1663,7 +1664,7 @@ color:#fff;
 	-o-transition: all 0.4s ease 0s;
 	transition: all 0.4s ease 0s;
 }
-.single_blog:hover .post-date{background:#C69E78ff;}
+.single_blog:hover .post-date{background:#0D5360ff;}
 .single_blog:hover .post-date .date{color:#fff;}
 .single_blog:hover .post-date .month {color:#fff;}
 .date {
@@ -1688,7 +1689,7 @@ color:#fff;
 	transition: all 0.4s ease 0s;
 	line-height: 36px;
 }
-.blog_content h3 a:hover{color:#C69E78ff;}
+.blog_content h3 a:hover{color:#0D5360ff;}
 
 .blog-page{background:#f5f8fa;}
 .single_blog_page {
@@ -1708,10 +1709,10 @@ color:#fff;
 	-o-transition: 0.3s;
 	transition: 0.3s;
 }
-.single_blog_page h2 a:hover{color:#C69E78ff;}
+.single_blog_page h2 a:hover{color:#0D5360ff;}
 .single_blog_page span{}
 .single_blog_page span a {
-	color: #C69E78ff;
+	color: #0D5360ff;
 	display: inline-block;
 	margin-right: 10px;
 	margin-bottom: 10px;
@@ -1719,7 +1720,7 @@ color:#fff;
 .single_blog_page span a:hover{color:#1A2124ff;}
 .single_blog_page p{margin-bottom: 25px;}
 .single_blog_page_para{margin: 25px 0;}
-.single_blog_page_btn{color: #C69E78ff;}
+.single_blog_page_btn{color: #0D5360ff;}
 .single_blog_page_btn:hover{color: #1A2124ff;}
 
 /*START PAGINATION*/
@@ -1742,8 +1743,8 @@ width: 45px;
 }
 ul.blog_pagination li a:hover {
     color: #fff;
-    background: #C69E78ff;
-    border: 1px solid #C69E78ff;
+    background: #0D5360ff;
+    border: 1px solid #0D5360ff;
 }
 /*END PAGINATION*/
 /*START BLOG SIDEBAR DESIGN*/
@@ -1764,7 +1765,7 @@ text-transform: uppercase;
 	background: #fff;
 	padding: 30px 30px;
 	border-radius: 3px;
-	border-top: 3px solid #C69E78ff;
+	border-top: 3px solid #0D5360ff;
 	-webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.06);
 	        box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.06);
 }
@@ -1782,7 +1783,7 @@ color: #282828;
 transition: all 0.3s ease 0s;
 height: 50px;
 }
-.blog_search input:focus{border: 1px solid #C69E78ff;}
+.blog_search input:focus{border: 1px solid #0D5360ff;}
 .single_latest_blog {
 	overflow: hidden;
 	border-bottom: 1px solid #eee;
@@ -1799,7 +1800,7 @@ height: 50px;
 	-o-transition: all 0.3s ease 0s;
 	transition: all 0.3s ease 0s;
 }
-.single_latest_blog:hover h4 { color: #C69E78ff }
+.single_latest_blog:hover h4 { color: #0D5360ff }
 .single_latest_blog span { color: #161616 }
 .single_upcoming_event {margin-bottom: 20px;}
 .single_upcoming_event h4 {
@@ -1812,8 +1813,8 @@ height: 50px;
 	-o-transition: all 0.3s ease 0s;
 	transition: all 0.3s ease 0s;
 }
-.single_upcoming_event:hover h4 { color: #C69E78ff }
-.single_upcoming_event span i{margin-right:5px;color: #C69E78ff }
+.single_upcoming_event:hover h4 { color: #0D5360ff }
+.single_upcoming_event span i{margin-right:5px;color: #0D5360ff }
 .single_upcoming_event span { color: #777 }
 .categories ul {
     margin: 0;
@@ -1828,7 +1829,7 @@ height: 50px;
 	font-weight: 500;
 	padding: 5px 0;
 }
-.categories ul li a:hover { color: #C69E78ff }
+.categories ul li a:hover { color: #0D5360ff }
 .categories ul li a i { margin-right: 10px }
 .video_post iframe {
     width: 100%;
@@ -1836,7 +1837,7 @@ height: 50px;
     border: medium none;
 }
 .tag a {
-	border: 2px solid #C69E78ff;
+	border: 2px solid #0D5360ff;
 	border-radius: 30px;
 	color: #1A2124ff;
 	display: block;
@@ -1851,9 +1852,9 @@ height: 50px;
 	transition: all 0.3s ease 0s;
 }
 .tag a:hover {
-    background: #C69E78ff;
+    background: #0D5360ff;
     color: #fff;
-    border: 2px solid #C69E78ff;
+    border: 2px solid #0D5360ff;
 }
 /*END BLOG SIDEBAR DESIGN*/
 /*START BLOG SINGLE PAGE DESIGN*/
@@ -1872,7 +1873,7 @@ height: 50px;
     padding: 20px;
 }
 .author_part img {
-    border: 4px solid #C69E78ff;
+    border: 4px solid #0D5360ff;
     border-radius: 100px;
     float: left;
     height: 120px;
@@ -1910,7 +1911,7 @@ padding:60px;
 }
 .single_comment_mbnone { margin-bottom: 0px }
 .single_comment img {
-    border: 4px solid #C69E78ff;
+    border: 4px solid #0D5360ff;
     border-radius: 100px;
     float: left;
     height: 120px;
@@ -1974,7 +1975,7 @@ text-transform: uppercase;}
 	-webkit-transition: all 0.3s ease 0s;
 	-o-transition: all 0.3s ease 0s;
 	transition: all 0.3s ease 0s;
-	background: #C69E78ff!important;
+	background: #0D5360ff!important;
 	font-family: 'poppins', sans-serif;
 	cursor: pointer;
 	width: 100%;
@@ -2000,9 +2001,9 @@ text-transform: uppercase;}
 .partner_br {
 	-webkit-box-shadow: 0px 19px 43px 0px rgba(17, 17, 17, 0.05);
 	        box-shadow: 0px 19px 43px 0px rgba(17, 17, 17, 0.05);
-	border-top: 1px solid #C69E78ff;
+	border-top: 1px solid #0D5360ff;
 	border-radius: 3px;
-	border-bottom: 1px solid #C69E78ff;
+	border-bottom: 1px solid #0D5360ff;
 }
 .single_logo {padding:30px;}
 .single_logo a img {
@@ -2095,7 +2096,7 @@ color: #1A2124ff;
 	-webkit-transition: all 0.3s ease 0s;
 	-o-transition: all 0.3s ease 0s;
 	transition: all 0.3s ease 0s;
-	background: #C69E78ff;
+	background: #0D5360ff;
 	font-family: 'poppins', sans-serif;
 	cursor: pointer;
 	width: 100%;
@@ -2117,7 +2118,7 @@ color: #1A2124ff;
 }
 .single_address i {
 	background: #f6f6f6;
-	color: #C69E78ff;
+	color: #0D5360ff;
 	border-radius: 30px;
 	width: 60px;
 	height: 60px;
@@ -2134,7 +2135,7 @@ color: #1A2124ff;
 	transition: all 0.3s ease 0s;
 }
 .single_address:hover i {
-	background: #C69E78ff;
+	background: #0D5360ff;
 	color: #fff;
 }
 .single_address h4 {
@@ -2194,7 +2195,7 @@ color: #1A2124ff;
 .subscribe__input{font-size: 13px;}
 }
 .subscribe__btn {
-	background-color: #C69E78ff;
+	background-color: #0D5360ff;
 	border-radius: 100px;
 	color: #fff;
 	cursor: pointer;
@@ -2295,7 +2296,7 @@ color:#1A2124ff;
 	transition: all 0.2s ease 0s;
 	font-weight: 500;
 }
-.copyright a:hover{color:#C69E78ff;}
+.copyright a:hover{color:#0D5360ff;}
 /*
 * ----------------------------------------------------------------------------------------
 * 14.END FOOTER DESIGN
@@ -2400,9 +2401,24 @@ font-weight: 600;
             transform: translate(0, -10px);
 }
 
+/* Table Curriculum */
 td a:hover {
 	color: #074754ff;
 }
+
+.midnight {
+	border-color: #0D5360ff; 
+	border-width: 3px;
+}
+
+/* Responsive Logo */
+@media only screen and (max-width:480px) { 
+	.site-logo  img  {
+	width: auto;
+	height: 55px;	
+	}
+}
+
 
 /*
  * ----------------------------------------------------------------------------------------
